# HikProtocolLib

./: CMakeLists.txt  readme.txt
src/: AlarmClient.cpp  AlarmClient.hpp  AlarmManager.cpp  AlarmManager.hpp  Alarmer.cpp  Alarmer.hpp  AlarmerArgs.hpp  Connection.cpp  Connection.hpp  HikAlarmApplication.cpp  HikAlarmApplication.h  ProtocolSession.cpp  ProtocolSession.hpp  Utils.cpp
src/Config/: ChannelConfig.cpp  ChannelConfig.hpp  Config.cpp  Config.hpp  ServerConfig.cpp  ServerConfig.hpp
src/Misc/: Debug.hpp  Timer.cpp  Timer.hpp  Utils.hpp
src/Protocol/: Alarm.cpp  Alarm.hpp  AlarmConstants.hpp  Auth.cpp  Auth.hpp  AuthResult.hpp  Base.cpp  Base.hpp  ITransport.hpp
